# guix-home

./: .gitignore  .guix-authorizations  .guix-channel  AGENTS.md  AUTHORS  CLAUDE.md  Makefile  Makefile.am  NEWS  README  README.org  bootstrap  channels.scm  configure.ac  guix.scm  macbook.org  manifest  pre-inst-env.in  precision.org  roman.scherer@nubank.com.br.key
.beads/: config.yaml  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.github/workflows/: build.yml  test.yml
.guix/: manifest.scm
asahi/guix/home/services/: sound.scm
build-aux/: regen-ghostty-golden.scm  scrape-ghostty-docs.scm
doc/: m1.org  vm.org
docs/: SERVICE-TYPES.md
modules/r0man/guix/: channels.scm  colors.scm  tests.scm
modules/r0man/guix/home/: agent.scm  bash.scm  btop.scm  channels.scm  claude-code.scm  clojure.scm  common-lisp.scm  container-home.scm  containers.scm  desktop.scm  eca.scm  emacs.scm  environment.scm  fzf.scm  git.scm  gpg.scm  guile.scm  hyprland.scm  i3status.scm  ibus.scm  kitty.scm  librewolf.scm  mbsync.scm  msmtp.scm  niri.scm  nix.scm  packages.scm  pm.scm  rofi.scm  sound.scm  ssh.scm  stumpwm.scm  sway.scm  tmux.scm  waybar.scm  wofi.scm  x11.scm  xdg.scm
modules/r0man/guix/home/environments/: container.scm  gascity.scm  gastown.scm  m1.scm  nu.scm  precision.scm  server.scm
modules/r0man/guix/home/files/: Xresources  Xresources.precision  bash_profile  bashrc  clojure-lsp.edn  guile  tmux.conf  xbindkeysrc  xinitrc  xprofile  xsession
modules/r0man/guix/home/files/claude-code/: settings.json
modules/r0man/guix/home/files/claude-code/agents/: code-reviewer.md  documentation-writer.md  security-audit.md
modules/r0man/guix/home/files/claude-code/commands/: create-guix-package.md  plan-to-beads.md  update-guix-package.md
modules/r0man/guix/home/files/claude-code/skills/asahi-linux/: SKILL.md
modules/r0man/guix/home/files/claude-code/skills/autoresearch/: SKILL.md
modules/r0man/guix/home/files/claude-code/skills/clog/: SKILL.md
modules/r0man/guix/home/files/claude-code/skills/code-review/: SKILL.md
modules/r0man/guix/home/files/claude-code/skills/design/: SKILL.md
modules/r0man/guix/home/files/claude-code/skills/guix/: SKILL.md
modules/r0man/guix/home/files/claude-code/skills/haunt/: SKILL.md
modules/r0man/guix/home/files/claude-code/skills/shiny-enterprise/: SKILL.md
modules/r0man/guix/home/files/containers/: policy.json
modules/r0man/guix/home/files/eca/: AGENTS.md  config.json  eca-server-authinfo
modules/r0man/guix/home/files/eca/commands/: create-guix-package.md  update-guix-package.md
modules/r0man/guix/home/files/emacs/: README.md  README.org  bookmarks  early-init.el  early-init.el.org  init.el  init.el.org
modules/r0man/guix/home/files/ghostty/: config.ghostty
modules/r0man/guix/home/files/librewolf/: librewolf.overrides.cfg
modules/r0man/guix/home/files/niri/: config-common.kdl  config-m1.kdl  config-precision.kdl  config.kdl
modules/r0man/guix/home/files/rofi/: config.rasi
modules/r0man/guix/home/files/ssh/: roman@burningswell.com.pub  roman@precision.pub
modules/r0man/guix/home/files/stumpwm/: commands.lisp  config  start
modules/r0man/guix/home/files/waybar/: config  config.jsonc  style.css
modules/r0man/guix/home/services/: btop.scm  claude-code.scm  clojure.scm  common-lisp.scm  container-home.scm  eca.scm  emacs.scm  environment.scm  fzf.scm  gascity-toml.scm  gascity.scm  gastown.scm  ghostty.scm  git.scm  guile.scm  hyprland.scm  i3status.scm  kitty.scm  librewolf.scm  mbsync.scm  niri.scm  nix.scm  rofi.scm  stumpwm.scm  sway.scm  waybar.scm  wofi.scm  x11.scm
modules/r0man/guix/home/systems/: agent.scm  container.scm  gastown-test.scm  gastown.scm  m1.scm  precision.scm  server.scm
modules/r0man/guix/services/: gastown.scm  home-container.scm
modules/r0man/guix/system/: agent.scm  base.scm  burningswell.scm  channels.scm  desktop.scm  m1-test.scm  m1.scm  services.scm  vm.scm
modules/r0man/guix/system/services/: auditd.scm  avahi.scm  bluetooth.scm  certbot.scm  console-font.scm  containerd.scm  cups.scm  docker.scm  elogind.scm  guix-publish.scm  keyboard.scm  libvirt.scm  nix.scm  openssh.scm  pcscd.scm  postgresql.scm  qemu.scm  screen-locker.scm  slim.scm  substitutes.scm  udev-fido2.scm  xorg.scm
modules/r0man/guix/tests/: runner.scm
modules/r0man/guix/tests/home/: bash.scm  gascity.scm
modules/r0man/guix/tests/systems/: base.scm
r0man/guix/deploy/: m1.scm
r0man/guix/home/: audio.scm  bash.scm  channels.scm  clojure.scm  common-lisp.scm  config.scm  emacs.scm  environment.scm  fzf.scm  git.scm  gpg.scm  guile.scm  i3status.scm  kitty.scm  mcron.scm  packages.scm  pipewire.scm  shepherd.scm  sound.scm  stumpwm.scm  sway.scm  x11.scm  xdg.scm
r0man/guix/home/files/: Xresources  Xresources.bombaclaat  Xresources.precision  Xresources.thinkpad  bash_profile  bashrc  clojure-lsp.edn  xinitrc  xprofile  xsession
r0man/guix/home/files/stumpwm/: commands.lisp  config  start
r0man/guix/home/files/sway/: config
r0man/guix/system/: asahi-guix.scm  m1.scm
r0man/home/: bash.scm  channels.scm  clojure.scm  common-lisp.scm  config.scm  emacs.scm  environment.scm  gpg.scm  guile.scm  mcron.scm  packages.scm  profiles.scm  shepherd.scm  stumpwm.scm  sway.scm  x11.scm  xdg.scm
r0man/home/bash/: .bash_profile  .bashrc
r0man/home/files/: Xresources.bombaclaat  Xresources.precision  bash_profile  bashrc  clojure-lsp.edn  guile  sbclrc  xbindkeysrc  xinitrc  xprofile  xsession
r0man/home/files/bash/: .bash_profile
r0man/home/files/clojure-lsp/: config.edn
r0man/home/files/gpg/: gpg-agent.conf
r0man/home/files/stumpwm/: commands.lisp  config
r0man/profile/: emacs.scm
r0man/profiles/: emacs-native-comp.scm
scripts/: test-gastown-towns.sh
tests/data/ghostty/: golden-heavy.config  golden-minimal.config
tests/r0man/guix/: smoke.scm
tests/r0man/guix/home/: bash.scm  environments.scm  gascity-toml.scm  gascity.scm  ghostty.scm
tests/r0man/guix/systems/: base.scm
(+40 files in other folders)
